# nspi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  nspi_config.h.in
.github/workflows/: build.yml  cmake-single-platform.yml
cmake/: toolchain.cmake
include/: nspi_app.h  nspi_console.h  nspi_linux_switch.h  nspi_logger.h  nspi_logger_menu.h  nspi_menu.h  nspi_menu_manager.h  nspi_pad.h  nspi_selectable_menu.h  nspi_title.h  nspi_title_menu.h  nspi_title_selector_menu.h
lib/: CMakeLists.txt  libnx.cmake
src/: main.cpp  nspi_app.cpp  nspi_console.cpp  nspi_logger.cpp  nspi_logger_menu.cpp  nspi_menu.cpp  nspi_menu_manager.cpp  nspi_pad.cpp  nspi_selectable_menu.cpp  nspi_title_menu.cpp  nspi_title_selector_menu.cpp
tools/: CMakeLists.txt
